--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "communication": "cd communication && npm run dev",
-    "adv": "cd adv && npm run dev"
+    "communication": "cd 08-communication && npm run dev",
+    "prj-cmp": "cd 10-prj-cmp && npm run dev",
+    "forms": "cd 11-forms && npm run dev",
+    "adv": "cd 09-adv && npm run dev",
+    "http": "cd 12-http && npm run dev"
   },
   "keywords": [],
   "author": "",
